2009-11-02  Per Bothner  <per@bothner.com>

	* threadring.scm: New benchmark, for shootout.alioth.debian.org.
	Based on Java 6 -server #4 version contributed by Fabien Le Floc'h
	* threadring-output.txt: Expected output.
	* Makefile.am: Update accordingly.

2009-11-01  Per Bothner  <per@bothner.com>

	* inlining.expected: Update since static modules are now the default.

2009-10-19  Per Bothner  <per@bothner.com>

	* knucleotide.scm: New benchmark, for shootout.alioth.debian.org.
	Based on mzscheme version, with some bits based on
	Java version contributed by James McIlree.
	* knucleotide-output.txt: Expected output.
	* Makefile.am: Update accordingly.

	* fasta.scm: Add some optimization tweaks.
	(make-cumulative-table): Revert previous use of vector-ref,
	since it is no longer needed.

	* nbody.scm: Moving constants earlier makes for better code.
	* regexdna.scm: Inlining and other optimizations.
	* Makefile.am (inlining.log): Add inlining tests.
	* inlining.expected: Update accordingly.

2009-10-18  Per Bothner  <per@bothner.com>

	* fasta.scm (make-cumulative-table): Using vector-ref directly
	optimizes better.
	* mandelbrot.scm: Do inlining and other optimizations.
	* fannkuch.scm: Various optimizations.
	* Makefile.am (inlining.log): Also check inlining of binarytrees,
	fasta, and mandelbrot benchmarks.  Add/fix fannkuch test.
	* inlining.expected: Update accordingly.

2009-10-12  Per Bothner  <per@bothner.com>

	* Makefile.am (inlining.class):  Also check recomp#revcomp.
	* revcomp.scm (revcomp): Set explicit void return type.
	* inlining.expected: Update accordingly.

	* revcomp.scm: New benchmark, for shootout.alioth.debian.org.
	Loosely based on Java version contributed by Anthony Donnefort
	and slightly modified to read 82 bytes at a time by Razii.
	* revcomp-output.txt: Expected output.
	* Makefile.am: Update accordingly.

2009-10-09  Per Bothner  <per@bothner.com>

	* nbody.scm: New benchmark, from shootout.alioth.debian.org.