@@ -367,7 +367,7 @@ inlining.log: InliningTest.class cycle1.class cycle2.class \
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize binarytrees.class bottomUpTree test >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
-	$(JAVA) gnu.bytecode.ListCodeSize TreeNode.class itemCheck >>inlining.log
+	$(JAVA) gnu.bytecode.ListCodeSize 'binarytrees$$TreeNode.class' itemCheck >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize fannkuch.class 'vectorReverseSlice$$Ex' countFlips vectorCopy fannkuch >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
@@ -375,15 +375,15 @@ inlining.log: InliningTest.class cycle1.class cycle2.class \
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize pidigits.class pidigits >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
-	$(JAVA) gnu.bytecode.ListCodeSize Transformation.class next extract compose >>inlining.log
+	$(JAVA) gnu.bytecode.ListCodeSize 'pidigits$$Transformation.class' next extract compose >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
-	$(JAVA) gnu.bytecode.ListCodeSize PiDigitSpigot.class next digit isSafe produce consume >>inlining.log
+	$(JAVA) gnu.bytecode.ListCodeSize 'pidigits$$PiDigitSpigot.class' next digit isSafe produce consume >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize mandelbrot.class compute >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize nbody.class A nbodySystem advance energy jupiter >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
-	$(JAVA) gnu.bytecode.ListCodeSize Body.class offsetMomentum >>inlining.log
+	$(JAVA) gnu.bytecode.ListCodeSize 'nbody$$Body.class' offsetMomentum >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize regexdna.class regexdna >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
