@@ -85,29 +85,29 @@ InliningTest.inlineTwoFunctions(java.lang.Object)java.lang.Object: 23 bytes
 InliningTest.checkEven(int)java.lang.Object: 34 bytes
 cycle1.isIsEven(int)boolean: 17 bytes
 cycle2.isIsOdd(int)boolean: 17 bytes
-binarytrees.bottomUpTree(int,int)TreeNode: 60 bytes
+binarytrees.bottomUpTree(int,int)binarytrees$TreeNode: 60 bytes
 binarytrees.test(int)java.lang.Object: 222 bytes
-TreeNode.itemCheck()int: 36 bytes
+binarytrees$TreeNode.itemCheck()int: 36 bytes
 fannkuch.vectorReverseSlice$Ex(int[],int,int)void: 35 bytes
 fannkuch.countFlips(int[])int: 33 bytes
 fannkuch.vectorCopy(int[])int[]: 27 bytes
 fannkuch.fannkuch(int)int: 233 bytes
 fasta.randomNext(double)double: 28 bytes
 pidigits.pidigits(int,java.io.PrintStream)void: 125 bytes
-Transformation.next()void: 59 bytes
-Transformation.extract(int)int: 41 bytes
-Transformation.compose(Transformation)Transformation: 110 bytes
-PiDigitSpigot.next()int: 50 bytes
-PiDigitSpigot.digit()int: 9 bytes
-PiDigitSpigot.isSafe(int)boolean: 18 bytes
-PiDigitSpigot.produce(int)Transformation: 27 bytes
-PiDigitSpigot.consume(Transformation)Transformation: 9 bytes
+pidigits$Transformation.next()void: 59 bytes
+pidigits$Transformation.extract(int)int: 41 bytes
+pidigits$Transformation.compose(pidigits$Transformation)pidigits$Transformation: 110 bytes
+pidigits$PiDigitSpigot.next()int: 50 bytes
+pidigits$PiDigitSpigot.digit()int: 9 bytes
+pidigits$PiDigitSpigot.isSafe(int)boolean: 18 bytes
+pidigits$PiDigitSpigot.produce(int)pidigits$Transformation: 27 bytes
+pidigits$PiDigitSpigot.consume(pidigits$Transformation)pidigits$Transformation: 9 bytes
 mandelbrot.compute(int,java.io.PrintStream)void: 324 bytes
 nbody.nbodySystem(int)void: 207 bytes
-nbody.advance(Body[],double)void: 330 bytes
-nbody.energy(Body[])double: 181 bytes
-nbody.jupiter()Body: 57 bytes
-Body.offsetMomentum(double,double,double)void: 32 bytes
+nbody.advance(nbody$Body[],double)void: 330 bytes
+nbody.energy(nbody$Body[])double: 181 bytes
+nbody.jupiter()nbody$Body: 57 bytes
+nbody$Body.offsetMomentum(double,double,double)void: 32 bytes
 regexdna.regexdna(java.io.InputStream)java.lang.Object: 372 bytes
 revcomp.revcomp(java.io.InputStream)void: 382 bytes
 spectralnorm.Approximate(int)double: 110 bytes
